Trying to fix dashboard queries